test/sematest/invalid/redefinition_of_variable_in_same_scope3.java
class A {
  public static void main(String[] args) {
  }

  public void bla(){
    int a = 0;
    int a = 0;
  }
}